--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "prisma": "^5.21.1"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.21.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "nodemon": "^3.1.7"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon/app"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "@internationalized/date": "^3.5.4",
+        "@prisma/client": "^5.16.0",
+        "@react-aria/i18n": "^3.11.1",
+        "axios": "^1.7.5",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "date-fns": "^3.1.0",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "mercadopago": "^2.0.14",
+        "multer": "^1.4.5-lts.1",
+        "mysql2": "^3.10.1",
+        "next-themes": "^0.3.0",
+        "nodemailer": "^6.9.10",
+        "nodemon": "^3.0.2",
+        "react-hook-form": "^7.52.1",
+        "swr": "^2.2.5",
+        "yarn": "^1.22.21",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "prisma": "^5.15.1"
+    }
 }
