--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,5 @@
-
-
-# conexão com ip remoto
-DATABASE_URL="mysql://fluxodocap_maicom:bancodedados9612@107.161.183.247:3306/fluxodocap_fluxodocapital"
-# # conexão com local
-# DATABASE_URL="mysql://fluxodocap_maicom:bancodedados9612@localhost:3306/fluxodocap_fluxodocapital"
-# # conexão com root
-# DATABASE_URL="mysql://root:bancodedados9612@localhost:3306/fluxodocap_fluxodocapital"
-
+DB_HOST=107.161.183.247
+DB_USER=fluxodocap_maicom
+DB_PASSWORD=bancodedados9612
+DB_NAME=fluxodocap_fluxodocapital
+DB_PORT=3306
